--- a/2020년_6월.md
+++ b/2020년_6월.md
@@ -1,6 +1,10 @@
 # Dailynews_Scrap
 
 - 2020년_6월
+  
+    - 2020.06.15
+      >- Title : [민간이 '인공지능 뉴딜'에 뛰어든 이유](http://www.bloter.net/archives/389987)
+      >- keyword : `산업지능화`, `인공지능`, `한국형 뉴딜`
  
     - 2020.06.12
       >- Title : [양자보안 스마트폰은 어떻게 만들어졌나](http://www.bloter.net/archives/389633)
