--- a/2020년_6월.md
+++ b/2020년_6월.md
@@ -3,6 +3,9 @@
 - 2020년_6월
   
     - 2020.06.15
+      >- Title : [면허증이 휴대폰에 쏙…24일부터 ‘모바일 운전면허증’ 도입](http://www.bloter.net/archives/389797)
+      >- keyword : `pass`, `모바일 운전면허증`
+      
       >- Title : [민간이 '인공지능 뉴딜'에 뛰어든 이유](http://www.bloter.net/archives/389987)
       >- keyword : `산업지능화`, `인공지능`, `한국형 뉴딜`
  
