--- a/2020년_6월.md
+++ b/2020년_6월.md
@@ -3,6 +3,9 @@
 - 2020년_6월
   
     - 2020.06.15
+      >- Title : [5G 상용화 1년, 소비자 품질 불만 1천건 이상](http://www.bloter.net/archives/389938)
+      >- keyword : `5G불만`, `기지국 부족` 
+    
       >- Title : [면허증이 휴대폰에 쏙…24일부터 ‘모바일 운전면허증’ 도입](http://www.bloter.net/archives/389797)
       >- keyword : `pass`, `모바일 운전면허증`
       
