--- a/2020년_6월.md
+++ b/2020년_6월.md
@@ -2,6 +2,10 @@
 
 - 2020년_6월
   
+    - 2020.06.16
+      >- Title : [페이스북, ‘왓츠앱 페이’ 서비스 브라질 진출](http://www.bloter.net/archives/390359)
+      >- keyword : `왓츠앱`, `페이스북`, `핀테크`   
+  
     - 2020.06.15
       >- Title : [5G 상용화 1년, 소비자 품질 불만 1천건 이상](http://www.bloter.net/archives/389938)
       >- keyword : `5G불만`, `기지국 부족` 
