--- a/2020년_6월.md
+++ b/2020년_6월.md
@@ -3,6 +3,9 @@
 - 2020년_6월
   
     - 2020.06.16
+      >- Title : [“체크인부터 키 발급까지 모바일 DID로”…야놀자, 호텔 서비스에 람다256 DID 접목](http://www.bloter.net/archives/390160)
+      >- keyword : `DID`, `람다256`, `분산신원증명`, `야놀자`
+    
       >- Title : [페이스북, ‘왓츠앱 페이’ 서비스 브라질 진출](http://www.bloter.net/archives/390359)
       >- keyword : `왓츠앱`, `페이스북`, `핀테크`   
   
