--- a/2020년_6월.md
+++ b/2020년_6월.md
@@ -3,6 +3,9 @@
 - 2020년_6월
   
     - 2020.06.16
+      >- Title : [역대 최악의 개인정보 유출 사고…1.5TB 분량 털렸나](http://www.bloter.net/archives/390187)
+      >- keyword : `개인정보유출`, `하나은행`, `해킹`
+    
       >- Title : [“체크인부터 키 발급까지 모바일 DID로”…야놀자, 호텔 서비스에 람다256 DID 접목](http://www.bloter.net/archives/390160)
       >- keyword : `DID`, `람다256`, `분산신원증명`, `야놀자`
     
