--- a/2020년_6월.md
+++ b/2020년_6월.md
@@ -3,6 +3,9 @@
 - 2020년_6월
   
     - 2020.06.16
+      >- Title : [인스타그램, “흑인 차별과 알고리즘 편향 문제 조사할 것”](http://www.bloter.net/archives/390350)
+      >- keyword : `인스타그램`, `알고리즘`, `차별 해결 `
+    
       >- Title : [역대 최악의 개인정보 유출 사고…1.5TB 분량 털렸나](http://www.bloter.net/archives/390187)
       >- keyword : `개인정보유출`, `하나은행`, `해킹`
     
