--- a/2020년_6월.md
+++ b/2020년_6월.md
@@ -3,6 +3,9 @@
 - 2020년_6월
   
     - 2020.06.16
+      >- Title : [“IoT 보안 문제 해결에 ‘DID’ 적용한다”…립체인-쿠노소프트 MOU 체결](http://www.bloter.net/archives/390253)
+      >- keyword : `IoT`, `립체인`, `블록체인`
+    
       >- Title : [인스타그램, “흑인 차별과 알고리즘 편향 문제 조사할 것”](http://www.bloter.net/archives/390350)
       >- keyword : `인스타그램`, `알고리즘`, `차별 해결 `
     
