--- a/2020년_6월.md
+++ b/2020년_6월.md
@@ -2,6 +2,10 @@
 
 - 2020년_6월
   
+    - 2020.06.17
+      >- Title : [[이슈IN] ’25년’ 지속한 SKT 2G…’22일’간 종료한다](http://www.bloter.net/archives/390488)
+      >- keyword : `2G`, `SKT`, `01x`
+  
     - 2020.06.16
       >- Title : [“IoT 보안 문제 해결에 ‘DID’ 적용한다”…립체인-쿠노소프트 MOU 체결](http://www.bloter.net/archives/390253)
       >- keyword : `IoT`, `립체인`, `블록체인`
