--- a/2020년_6월.md
+++ b/2020년_6월.md
@@ -3,6 +3,9 @@
 - 2020년_6월
   
     - 2020.06.17
+      >- Title : [SK, 마이크로소프트 손잡고 글로벌 AI ·DT 전문가 키운다](http://www.bloter.net/archives/390473)
+      >- keyword : `SK그룹`, `마이써니`, `마이크로소프트`
+    
       >- Title : [[이슈IN] ’25년’ 지속한 SKT 2G…’22일’간 종료한다](http://www.bloter.net/archives/390488)
       >- keyword : `2G`, `SKT`, `01x`
   
