--- a/2020년_6월.md
+++ b/2020년_6월.md
@@ -3,6 +3,9 @@
 - 2020년_6월
   
     - 2020.06.17
+      >- Title : [[이슈IN] 국내 3대 OTT ‘통합설’…실현 가능성은?](http://www.bloter.net/archives/390327)
+      >- keyword : `왓챠`, `국내OTT`, `웨이브`, `티빙`
+    
       >- Title : [SK, 마이크로소프트 손잡고 글로벌 AI ·DT 전문가 키운다](http://www.bloter.net/archives/390473)
       >- keyword : `SK그룹`, `마이써니`, `마이크로소프트`
     
