--- a/2020년_6월.md
+++ b/2020년_6월.md
@@ -3,6 +3,9 @@
 - 2020년_6월
   
     - 2020.06.17
+      >- Title : [카톡으로 국세・지방세・과태료 납부 가능해진다](http://www.bloter.net/archives/390455)
+      >- keyword : `카카오`, `행안부`, `디지털정부`
+    
       >- Title : [[이슈IN] 국내 3대 OTT ‘통합설’…실현 가능성은?](http://www.bloter.net/archives/390327)
       >- keyword : `왓챠`, `국내OTT`, `웨이브`, `티빙`
     
