--- a/2020년_6월.md
+++ b/2020년_6월.md
@@ -3,6 +3,9 @@
 - 2020년_6월
   
     - 2020.06.17
+      >- Title : [“블록체인 가치 증명이 필요한 시기”…VC 투자 유치한 기업들](http://www.bloter.net/archives/390421)
+      >- keyword : `블록체인`, `VC`, `디앱`, `루니버스`
+    
       >- Title : [카톡으로 국세・지방세・과태료 납부 가능해진다](http://www.bloter.net/archives/390455)
       >- keyword : `카카오`, `행안부`, `디지털정부`
     
