--- a/2020년_6월.md
+++ b/2020년_6월.md
@@ -1,7 +1,11 @@
 # Dailynews_Scrap
 
 - 2020년_6월
-  
+    
+    - 2020.06.18
+      >- Title : [네이버 D2SF, 데이터 분석 기술 스타트업 3곳에 투자](http://www.bloter.net/archives/390652)
+      >- keyword : `네이버 D2SF`, `데이터라이즈`, `큐엠아이티`. `한국축산데이터`
+    
     - 2020.06.17
       >- Title : [“블록체인 가치 증명이 필요한 시기”…VC 투자 유치한 기업들](http://www.bloter.net/archives/390421)
       >- keyword : `블록체인`, `VC`, `디앱`, `루니버스`
