--- a/2020년_6월.md
+++ b/2020년_6월.md
@@ -3,6 +3,9 @@
 - 2020년_6월
     
     - 2020.06.18
+      >- Title : [“법대로 합시다” 법률 플랫폼 ‘화난사람들’, 프리 시리즈A 투자 유치](http://www.bloter.net/archives/390692)
+      >- keyword : `화난사람들`, `법률플랫폼`
+    
       >- Title : [네이버 D2SF, 데이터 분석 기술 스타트업 3곳에 투자](http://www.bloter.net/archives/390652)
       >- keyword : `네이버 D2SF`, `데이터라이즈`, `큐엠아이티`. `한국축산데이터`
     
