--- a/2020년_6월.md
+++ b/2020년_6월.md
@@ -3,6 +3,9 @@
 - 2020년_6월
     
     - 2020.06.18
+      >- Title : [퀄컴, 5G 기반 로봇 개발 플랫폼 선보여](http://www.bloter.net/archives/390818)
+      >- keyword : `5G`, `IoT`, `로봇`
+    
       >- Title : [“법대로 합시다” 법률 플랫폼 ‘화난사람들’, 프리 시리즈A 투자 유치](http://www.bloter.net/archives/390692)
       >- keyword : `화난사람들`, `법률플랫폼`
     
