--- a/2020년_6월.md
+++ b/2020년_6월.md
@@ -3,6 +3,9 @@
 - 2020년_6월
     
     - 2020.06.18
+      >- Title : [솔트룩스가 준비한 뉴노멀 시대의 ‘3세대 AI 플랫폼’](http://www.bloter.net/archives/390764)      
+      >- keyword : `AI 개발`, `AIaas`, `SAC2020`
+    
       >- Title : [퀄컴, 5G 기반 로봇 개발 플랫폼 선보여](http://www.bloter.net/archives/390818)
       >- keyword : `5G`, `IoT`, `로봇`
     
