--- a/2020년_6월.md
+++ b/2020년_6월.md
@@ -2,6 +2,10 @@
 
 - 2020년_6월
     
+    - 2020.06.19
+      >- Title : [유튜브, 광고보며 주요제품 다 살펴본다…새로운 상품 공개](http://www.bloter.net/archives/391041)
+      >- keyword : `유투브`, `광고상품`
+    
     - 2020.06.18
       >- Title : [솔트룩스가 준비한 뉴노멀 시대의 ‘3세대 AI 플랫폼’](http://www.bloter.net/archives/390764)      
       >- keyword : `AI 개발`, `AIaas`, `SAC2020`
