--- a/2020년_6월.md
+++ b/2020년_6월.md
@@ -3,6 +3,9 @@
 - 2020년_6월
     
     - 2020.06.19
+      >- Title : [서울이 3D로 한눈에…네이버랩스, 서울시 구석구석 ‘정밀 3D’로 구현](http://www.bloter.net/archives/390874)
+      >- keyword : `3D`, `서울`, `정밀3D`
+    
       >- Title : [유튜브, 광고보며 주요제품 다 살펴본다…새로운 상품 공개](http://www.bloter.net/archives/391041)
       >- keyword : `유투브`, `광고상품`
     
