--- a/2020년_6월.md
+++ b/2020년_6월.md
@@ -3,6 +3,9 @@
 - 2020년_6월
     
     - 2020.06.19
+      >- Title : [바이낸스, 올 여름 ‘금융 중심지’ 영국에 거래소 설립](http://www.bloter.net/archives/390894)
+      >- keyword : `가상자산거래소`, `바이낸스`, `블록체인`
+    
       >- Title : [서울이 3D로 한눈에…네이버랩스, 서울시 구석구석 ‘정밀 3D’로 구현](http://www.bloter.net/archives/390874)
       >- keyword : `3D`, `서울`, `정밀3D`
     
