--- a/2020년_6월.md
+++ b/2020년_6월.md
@@ -3,6 +3,9 @@
 - 2020년_6월
     
     - 2020.06.19
+      >- Title : [페이스북, 지도에 AR 입히나…지역정보 DB 스타트업 인수](http://www.bloter.net/archives/391037)
+      >- keyword : `페이스북`, `지역정보DB`, `AR기술개발`
+    
       >- Title : [바이낸스, 올 여름 ‘금융 중심지’ 영국에 거래소 설립](http://www.bloter.net/archives/390894)
       >- keyword : `가상자산거래소`, `바이낸스`, `블록체인`
     
