--- a/2020년_6월.md
+++ b/2020년_6월.md
@@ -2,6 +2,10 @@
 
 - 2020년_6월
     
+    - 2020.06.22
+      >- Title : [‘커뮤니티’ 노리는 스타트업들](http://www.bloter.net/archives/391285)
+      >- keyword : `당근마켓`, `에브리타임`, `스타트업`, `커뮤니티`
+    
     - 2020.06.19
       >- Title : [페이스북, 지도에 AR 입히나…지역정보 DB 스타트업 인수](http://www.bloter.net/archives/391037)
       >- keyword : `페이스북`, `지역정보DB`, `AR기술개발`
