--- a/2020년_6월.md
+++ b/2020년_6월.md
@@ -3,6 +3,9 @@
 - 2020년_6월
     
     - 2020.06.22
+      >- Title : [악명 높던 구글 크롬, 메모리 사용 줄인다](http://www.bloter.net/archives/391363)
+      >- keyword : `구글`, `크롬`, `메모리 먹는 하마`
+    
       >- Title : [‘커뮤니티’ 노리는 스타트업들](http://www.bloter.net/archives/391285)
       >- keyword : `당근마켓`, `에브리타임`, `스타트업`, `커뮤니티`
     
