--- a/2020년_6월.md
+++ b/2020년_6월.md
@@ -3,6 +3,9 @@
 - 2020년_6월
     
     - 2020.06.22
+      >- Title : [‘딥페이크’ 잡는 AI 데이터, ‘데이터댐’에 쌓는다](http://www.bloter.net/archives/391373)
+      >- keyword : `AI 학습용 데이터`, `과학기술정보통신부`, `딥페이크`
+    
       >- Title : [악명 높던 구글 크롬, 메모리 사용 줄인다](http://www.bloter.net/archives/391363)
       >- keyword : `구글`, `크롬`, `메모리 먹는 하마`
     
