--- a/2020년_6월.md
+++ b/2020년_6월.md
@@ -2,6 +2,10 @@
 
 - 2020년_6월
     
+    - 2020.06.24
+      >- Title : [“AI로 미래를 본다”…증권플러스 ‘인공지능 차트예측 서비스’ 출시](http://www.bloter.net/archives/391613)
+      >- keyword : `인공지능`, `차트예측`, `머신러닝`
+    
     - 2020.06.22
       >- Title : [‘딥페이크’ 잡는 AI 데이터, ‘데이터댐’에 쌓는다](http://www.bloter.net/archives/391373)
       >- keyword : `AI 학습용 데이터`, `과학기술정보통신부`, `딥페이크`
