--- a/2020년_6월.md
+++ b/2020년_6월.md
@@ -3,6 +3,9 @@
 - 2020년_6월
     
     - 2020.06.24
+      >- Title : [글로벌 상용 DBMS 보다 5배 빠른 토종 DBMS 기술 개발](http://www.bloter.net/archives/391677)
+      >- keyword : `DBMS`, `KAIST`
+    
       >- Title : [“AI로 미래를 본다”…증권플러스 ‘인공지능 차트예측 서비스’ 출시](http://www.bloter.net/archives/391613)
       >- keyword : `인공지능`, `차트예측`, `머신러닝`
     
