--- a/2020년_6월.md
+++ b/2020년_6월.md
@@ -3,6 +3,9 @@
 - 2020년_6월
     
     - 2020.06.24
+      >- Title : [시력 보호해준다는 프로그램, 깔고 보니 ‘악성파일’?](http://www.bloter.net/archives/391636)
+      >- keyword : `시력보호프로그램`, `악성코드`
+    
       >- Title : [글로벌 상용 DBMS 보다 5배 빠른 토종 DBMS 기술 개발](http://www.bloter.net/archives/391677)
       >- keyword : `DBMS`, `KAIST`
     
