--- a/2020년_6월.md
+++ b/2020년_6월.md
@@ -2,6 +2,10 @@
 
 - 2020년_6월
     
+    - 2020.06.25
+      >- Title : [아마존, ‘코드 없이 프로그램 짜는’ 개발도구 선보이다](http://www.bloter.net/archives/392026)
+      >- keyword : `AWS`, `아마존`, `앱 개발`
+    
     - 2020.06.24
       >- Title : [시력 보호해준다는 프로그램, 깔고 보니 ‘악성파일’?](http://www.bloter.net/archives/391636)
       >- keyword : `시력보호프로그램`, `악성코드`
