--- a/2020년_6월.md
+++ b/2020년_6월.md
@@ -3,6 +3,9 @@
 - 2020년_6월
     
     - 2020.06.25
+      >- Title : [삼성페이, 영국에 ‘우회진출’…전용카드 발급 방식](http://www.bloter.net/archives/392020)
+      >- keyword : `삼성페이`, `영국`
+    
       >- Title : [아마존, ‘코드 없이 프로그램 짜는’ 개발도구 선보이다](http://www.bloter.net/archives/392026)
       >- keyword : `AWS`, `아마존`, `앱 개발`
     
