--- a/2020년_6월.md
+++ b/2020년_6월.md
@@ -3,6 +3,9 @@
 - 2020년_6월
     
     - 2020.06.25
+      >- Title : [가상자산 거래소에 ‘커스터디 비즈니스’가 분다](http://www.bloter.net/archives/392002)
+      >- keyword : `가상자산거래소`, `커스터디(수탁)`, `암호화폐`
+    
       >- Title : [삼성페이, 영국에 ‘우회진출’…전용카드 발급 방식](http://www.bloter.net/archives/392020)
       >- keyword : `삼성페이`, `영국`
     
