--- a/2020년_6월.md
+++ b/2020년_6월.md
@@ -3,6 +3,9 @@
 - 2020년_6월
     
     - 2020.06.25
+      >- Title : [구글 웨이모, 볼보와 로보택시 개발 협업 나선다](http://www.bloter.net/archives/392314)
+      >- keyword : `구글`, `웨이모`, `로보택시`, `볼보`
+    
       >- Title : [가상자산 거래소에 ‘커스터디 비즈니스’가 분다](http://www.bloter.net/archives/392002)
       >- keyword : `가상자산거래소`, `커스터디(수탁)`, `암호화폐`
     
