--- a/2020년_6월.md
+++ b/2020년_6월.md
@@ -3,6 +3,9 @@
 - 2020년_6월
     
     - 2020.06.25
+      >- Title : [“배그의 아버지, 정점에 서다”…크래프톤, ‘김창한 시대’ 연다](http://www.bloter.net/archives/392283)
+      >- keyword : `김창환`, `배틀그라운드`, `크래프톤`
+    
       >- Title : [구글 웨이모, 볼보와 로보택시 개발 협업 나선다](http://www.bloter.net/archives/392314)
       >- keyword : `구글`, `웨이모`, `로보택시`, `볼보`
     
