--- a/2020년_6월.md
+++ b/2020년_6월.md
@@ -2,13 +2,17 @@
 
 - 2020년_6월
     
-    - 2020.06.25
+    - 2020.06.26
+      >- Title : [구글 번역 앞섰다는 ‘하이브리드 번역’, 무얼 의미하나?](http://www.bloter.net/archives/392228)
+      >- keyword : `AI 번역`, `하이브리드 번역`, `트위그팜`
+      
       >- Title : [“배그의 아버지, 정점에 서다”…크래프톤, ‘김창한 시대’ 연다](http://www.bloter.net/archives/392283)
       >- keyword : `김창환`, `배틀그라운드`, `크래프톤`
     
       >- Title : [구글 웨이모, 볼보와 로보택시 개발 협업 나선다](http://www.bloter.net/archives/392314)
       >- keyword : `구글`, `웨이모`, `로보택시`, `볼보`
-    
+   
+    - 2020.06.25
       >- Title : [가상자산 거래소에 ‘커스터디 비즈니스’가 분다](http://www.bloter.net/archives/392002)
       >- keyword : `가상자산거래소`, `커스터디(수탁)`, `암호화폐`
     
