--- a/2020년_6월.md
+++ b/2020년_6월.md
@@ -3,6 +3,9 @@
 - 2020년_6월
     
     - 2020.06.26
+      >- Title : [화웨이 “비즈니스용 5G 확대 위해 통합된 표준 필요”](http://www.bloter.net/archives/392227)
+      >- keyword : `5G`, `화웨이`
+    
       >- Title : [구글 번역 앞섰다는 ‘하이브리드 번역’, 무얼 의미하나?](http://www.bloter.net/archives/392228)
       >- keyword : `AI 번역`, `하이브리드 번역`, `트위그팜`
       
