--- a/2020년_6월.md
+++ b/2020년_6월.md
@@ -3,6 +3,9 @@
 - 2020년_6월
     
     - 2020.06.26
+      >- Title : [‘컴퓨터는 늘 실수한다’… 얼굴인식 기술, 엉뚱한 사람 범인 만들다](http://www.bloter.net/archives/392232)
+      >- keyword : `부작용`, `얼굴인식`, `기술오류`
+    
       >- Title : [화웨이 “비즈니스용 5G 확대 위해 통합된 표준 필요”](http://www.bloter.net/archives/392227)
       >- keyword : `5G`, `화웨이`
     
