--- a/2020년_6월.md
+++ b/2020년_6월.md
@@ -3,6 +3,9 @@
 - 2020년_6월
     
     - 2020.06.26
+      >- Title : [KT, 르노삼성에 차세대 커넥티드카 서비스 공급](http://www.bloter.net/archives/392170)
+      >- keyword : `KT`, `인포테인먼트`, `커넥티드카`
+    
       >- Title : [‘컴퓨터는 늘 실수한다’… 얼굴인식 기술, 엉뚱한 사람 범인 만들다](http://www.bloter.net/archives/392232)
       >- keyword : `부작용`, `얼굴인식`, `기술오류`
     
