--- a/2020년_7월.md
+++ b/2020년_7월.md
@@ -1,6 +1,6 @@
-## DailynewsScrap
+# DailynewsScrap
 
-# 2020년_7월
+## 2020년_7월
     
     - 2020.07.31
       >- Title : [주니퍼 네트웍스, 4세대 AI 엔터프라이즈 발표](http://www.bloter.net/archives/398433)
